force-app/main/default/objects/Knowledge__kav/fields/AlwaysPublish__c.field-meta.xml
<CustomField>
    <fullName>AlwaysPublish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>常時掲載</label>
    <type>Checkbox</type>
</CustomField>