force-app/main/default/objects/Knowledge__kav/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>承認ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>申請前</fullName>
                <default>true</default>
                <label>申請前</label>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>承認済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>