force-app/main/default/objects/Knowledge__kav/fields/Chat_Answer__c.field-meta.xml
<CustomField>
    <fullName>Chat_Answer__c</fullName>
    <label>チャット回答</label>
    <length>200</length>
    <type>Text</type>
</CustomField>