force-app/main/default/objects/Knowledge__kav/fields/IsPublicationEnd__c.field-meta.xml
<CustomField>
    <fullName>IsPublicationEnd__c</fullName>
    <formula>PublicationEndDate__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>掲載終了</label>
    <type>Checkbox</type>
</CustomField>