force-app/main/default/objects/Knowledge__kav/fields/IsPublicationStart__c.field-meta.xml
<CustomField>
    <fullName>IsPublicationStart__c</fullName>
    <formula>PublicationStartDate__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>掲載開始</label>
    <type>Checkbox</type>
</CustomField>