force-app/main/default/objects/Knowledge__kav/fields/PublicationStartDate__c.field-meta.xml
<CustomField>
    <fullName>PublicationStartDate__c</fullName>
    <label>掲載開始日</label>
    <type>Date</type>
</CustomField>