force-app/main/default/objects/Knowledge__kav/recordTypes/Article.recordType-meta.xml
<RecordType>
    <fullName>Article</fullName>
    <active>true</active>
    <label>記事</label>
</RecordType>