force-app/main/default/objects/Knowledge__kav/recordTypes/Information.recordType-meta.xml
<RecordType>
    <fullName>Information</fullName>
    <active>true</active>
    <label>お知らせ(企業)</label>
</RecordType>