force-app/main/default/objects/Knowledge__kav/recordTypes/InformationRealEstate.recordType-meta.xml
<RecordType>
    <fullName>InformationRealEstate</fullName>
    <active>true</active>
    <label>お知らせ(不動産)</label>
</RecordType>