force-app/main/default/objects/Knowledge__kav/listViews/FromShatakuServiceInformation.listView-meta.xml
<ListView>
    <fullName>FromShatakuServiceInformation</fullName>
    <booleanFilter>(1 OR (2 AND 3)) AND 4</booleanFilter>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AlwaysPublish__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsPublicationStart__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsPublicationEnd__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Information</value>
    </filters>
    <label>日本社宅サービスからのお知らせ</label>
</ListView>