force-app/main/default/objects/Knowledge__kav/listViews/FromShatakuServiceInformationRealEstate.listView-meta.xml
<ListView>
    <fullName>FromShatakuServiceInformationRealEstate</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.InformationRealEstate</value>
    </filters>
    <label>日本社宅サービスからのお知らせ</label>
</ListView>